2010-11-01  Glenn Morris  <rgm@gnu.org>

	* nnir.el (declare-function): Add compat stub.
	(mm-url-insert, mm-url-encode-www-form-urlencoded): Declare.
	(nnir-run-gmane): Require 'mm-url.

	* mm-util.el (mm-string-to-multibyte): Simplify.

	* shr.el (declare-function): Add compat stub.
	(url-cache-create-filename): Declare.
	(mm-disable-multibyte, widget-convert-button): Autoload.

	* smime.el (ldap-search): Declare.
	(smime-cert-by-ldap-1): Require ldap on Emacs.

	* nnimap.el: Require nnmail, and gnus-sum when compiling.
	(nnimap-keepalive): Use gnus-float-time.

	* mail-source.el (nnheader-message, gnus-float-time): Autoload.
	(mail-source-delete-crash-box): Use gnus-float-time.

	* gnus-dired.el (gnus-completing-read): Autoload.

	* mm-view.el (gnus-rescale-image): Autoload.

	* mm-decode.el (gnus-completing-read, gnus-blocked-images): Autoload.

	* gnus.el (gnus-sloppily-equal-method-parameters): Move defn before use.

	* sieve-manage.el: Require 'cl when compiling.

	* gnus-util.el (iswitchb-read-buffer): Declare rather than autoload.
	(gnus-iswitchb-completing-read): Require iswitchb.
	(gnus-select-frame-set-input-focus): Silence compiler.

2010-10-31  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-subject-trailing-was-query): Change default to t,
	since I think that's what most people want.

	* nnimap.el (nnimap-request-accept-article): Erase buffer before
	appending for easier debugging.
	(nnimap-wait-for-connection): Take a regexp.
	(nnimap-request-accept-article): Wait for the continuation line before
	sending anything unless we're streaming.

	* gnus-art.el (gnus-treat-article): Only inhibit body washing, and
	leave the header washing to take place.

2010-10-31  Daniel Dehennin  <daniel.dehennin@baby-gnu.org>

	* gnus-msg.el (gnus-configure-posting-styles): Permit the use of
	regular expression match and replace in posting styles.

2010-10-31  Andrew Cohen  <cohen@andy.bu.edu>
